--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ p{
     gap: 1rem;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 
 }
 
@@ -44,6 +45,37 @@ p{
     background-color: rgb(205, 231, 255);
     padding: 2rem;
     box-shadow: 0 5px 10px rgba(16, 0, 247, 0.3);
-    max-width: 25rem;
+    max-width: 20rem;
     flex-basis: 100%;
+    border-radius: 15px;
 }
+
+.cards :hover{
+    background-color: rgb(140, 248, 228);
+    max-width: 28rem;
+    color: rgb(16, 2, 92);
+    font-weight: 700;
+    -webkit-transform:skew(1deg,-5deg);
+    border-radius: 5px;
+
+
+}
+
+
+/*--------barra*/
+::-webkit-scrollbar {
+    background-color: rgb(1, 1, 20);
+    width: 0.8rem;
+
+} 
+
+::-webkit-scrollbar-track {
+    background-color: rgb(255, 255, 255);
+    height: 20px;
+} 
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(87, 28, 223);
+} 
+
+
