--- a/styles.css
+++ b/styles.css
@@ -14,19 +14,38 @@ a {
 
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display: flex;
     height: 100vh;
-    align-items: center;  
+    align-items: center; 
+    justify-content: center; 
 }
 
 p{
     font-size: 0.8rem;
 }
 
+
+
+/*---------banner*/
+.banner {
+    background-color: rgb(140, 248, 228);
+    width: 100vw;
+    display: inline-flex;
+    height: 8rem;
+}
+
+.banner-titulo{
+    margin: auto;
+    align-items: center; 
+    justify-content: center; 
+    color: rgb(16, 2, 92);
+    font-size: 5rem;
+    font-stretch: extra-expanded;
+}
+
 /*------------------tarjetas*/
 .cards{
     padding: 1rem;
-    display: flex;
+    display: inline-flex;
     gap: 1rem;
     flex-wrap: wrap;
     justify-content: center;
@@ -52,7 +71,7 @@ p{
 
 .cards :hover{
     background-color: rgb(140, 248, 228);
-    max-width: 28rem;
+    max-width: 25rem;
     color: rgb(16, 2, 92);
     font-weight: 700;
     -webkit-transform:skew(1deg,-5deg);
